--- a/src/com/jornada/Config.properties
+++ b/src/com/jornada/Config.properties
@@ -8,3 +8,17 @@ config.password = Btcbrazil01
 
 config.media.nota = 60
 config.porcentagem.presenca = 75
+
+########<BEGIN> BoneCP Connection Pooling Configuration########
+bonecp.IdleConnectionTestPeriodInMinutes=1
+bonecp.IdleMaxAgeInMinutes=4
+bonecp.MaxConnectionsPerPartition=30
+bonecp.MinConnectionsPerPartition=1
+bonecp.PoolAvailabilityThreshold=5 
+bonecp.PartitionCount=1
+bonecp.AcquireIncrement=3
+bonecp.StatementsCacheSize=50
+bonecp.ReleaseHelperThreads=3
+bonecp.ConnectionTestStatement=SELECT NOW()
+bonecp.LazyInit=true
+########<END> BoneCP Connection Pooling Configuration########
