Adicionando criptografia no importando em excel.

--- a/src/com/jornada/Config.properties
+++ b/src/com/jornada/Config.properties
@@ -1,3 +1,4 @@
+########<BEGIN> Configuração Conexão########
 config.driver = org.postgresql.Driver
 config.url = jdbc:postgresql://
 config.host = localhost
@@ -5,9 +6,13 @@ config.portNumber=5432
 config.database = notas
 config.userName = BTCDashboard
 config.password = Btcbrazil01
+########<END> Configuração Conexão########
 
+########<BEGIN> Valores Padrões do Ambiente########
 config.media.nota = 60
 config.porcentagem.presenca = 75
+config.senha.inicial = 13579
+########<END> Valores Padrões do Ambiente########
 
 ########<BEGIN> BoneCP Connection Pooling Configuration########
 bonecp.IdleConnectionTestPeriodInMinutes=1
