- Adicionando Refresh quando a sessão não for mais válida. - Acertando bug de carregar dados de Ocorrencia do Aluno quando aluno logar.

--- a/src/com/jornada/Config.properties
+++ b/src/com/jornada/Config.properties
@@ -1,4 +1,4 @@
-########<BEGIN> Configuração Conexão########
+########<BEGIN> Configuração Conexão Postgres########
 config.driver = org.postgresql.Driver
 config.url = jdbc:postgresql://
 config.host = localhost
@@ -6,7 +6,7 @@ config.portNumber=5432
 config.database = notas
 config.userName = BTCDashboard
 config.password = Btcbrazil01
-########<END> Configuração Conexão########
+########<END> Configuração Conexão Postgres########
 
 ########<BEGIN> Valores Padrões do Ambiente########
 config.media.nota = 60
@@ -15,8 +15,8 @@ config.senha.inicial = 13579
 ########<END> Valores Padrões do Ambiente########
 
 ########<BEGIN> BoneCP Connection Pooling Configuration########
-bonecp.IdleConnectionTestPeriodInMinutes=1
-bonecp.IdleMaxAgeInMinutes=4
+bonecp.IdleConnectionTestPeriodInMinutes=3
+bonecp.IdleMaxAgeInMinutes=2
 bonecp.MaxConnectionsPerPartition=30
 bonecp.MinConnectionsPerPartition=1
 bonecp.PoolAvailabilityThreshold=5 
