--- a/war/WEB-INF/classes/com/jornada/Config.properties
+++ b/war/WEB-INF/classes/com/jornada/Config.properties
@@ -1,3 +1,4 @@
+########<BEGIN> Configuração Conexão Postgres########
 config.driver = org.postgresql.Driver
 config.url = jdbc:postgresql://
 config.host = localhost
@@ -5,6 +6,24 @@ config.portNumber=5432
 config.database = notas
 config.userName = BTCDashboard
 config.password = Btcbrazil01
+########<END> Configuração Conexão Postgres########
 
+########<BEGIN> Valores Padrões do Ambiente########
 config.media.nota = 60
 config.porcentagem.presenca = 75
+config.senha.inicial = 13579
+########<END> Valores Padrões do Ambiente########
+
+########<BEGIN> BoneCP Connection Pooling Configuration########
+bonecp.IdleConnectionTestPeriodInMinutes=3
+bonecp.IdleMaxAgeInMinutes=2
+bonecp.MaxConnectionsPerPartition=30
+bonecp.MinConnectionsPerPartition=1
+bonecp.PoolAvailabilityThreshold=5 
+bonecp.PartitionCount=1
+bonecp.AcquireIncrement=3
+bonecp.StatementsCacheSize=50
+bonecp.ReleaseHelperThreads=3
+bonecp.ConnectionTestStatement=SELECT NOW()
+bonecp.LazyInit=true
+########<END> BoneCP Connection Pooling Configuration########
