--- a/.classpath
+++ b/.classpath
@@ -26,5 +26,6 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/poi/poi-ooxml-schemas-3.7-20101029.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/poi/poi-scratchpad-3.7-20101029.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/poi/xmlbeans-2.3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Usuario/Desktop/Projeto/sistemaonline/war/WEB-INF/lib/javax.mail.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
